include/bcsv/bcsv_c_api.h

// ============================================================================
// Opaque handles
// ============================================================================
typedef void* bcsv_reader_t;
typedef void* bcsv_writer_t;
typedef void* bcsv_sampler_t;
typedef const void* const_bcsv_row_t;
typedef const void* const_bcsv_layout_t;
typedef const void* const_bcsv_sampler_t;
// Sampler mode — must match bcsv::SamplerMode!
typedef enum {
    BCSV_SAMPLER_TRUNCATE = 0,  // Skip rows where window is incomplete at boundaries
    BCSV_SAMPLER_EXPAND   = 1,  // Clamp out-of-bounds references to edge row
} bcsv_sampler_mode_t;
// ============================================================================
// Error API
// ============================================================================
const char*         bcsv_last_error     (void);                         // thread-local last error string (empty if no error)
void                bcsv_clear_last_error(void);                        // explicitly reset error state
// Get the compiled expressions (empty if not set)
const char*         bcsv_sampler_get_conditional(const_bcsv_sampler_t sampler);
const char*         bcsv_sampler_get_selection  (const_bcsv_sampler_t sampler);
// Set/get boundary mode (TRUNCATE or EXPAND)
void                bcsv_sampler_set_mode       (bcsv_sampler_t sampler, bcsv_sampler_mode_t mode);
bcsv_sampler_mode_t bcsv_sampler_get_mode       (const_bcsv_sampler_t sampler);
// Advance to next matching row. Returns true if a row is available.
bool                bcsv_sampler_next           (bcsv_sampler_t sampler);
// Current output row (valid after a successful bcsv_sampler_next)
const_bcsv_row_t    bcsv_sampler_row            (const_bcsv_sampler_t sampler);
// Output layout (reflects selection projection; equals source layout if no selection set)
const_bcsv_layout_t bcsv_sampler_output_layout  (const_bcsv_sampler_t sampler);
// Source-file row index of the current output row
size_t              bcsv_sampler_source_row_pos (const_bcsv_sampler_t sampler);
// Last error/compile-error message (empty if no error)
const char*         bcsv_sampler_error_msg      (const_bcsv_sampler_t sampler);
// ============================================================================
// Columnar Bulk I/O API
// ============================================================================
// Read up to max_rows rows from an opened reader into column-oriented buffers.
// bufs is an array of num_cols pointers. For numeric columns, each pointer must
// point to a pre-allocated buffer of element type matching the column type.
// For string columns, the pointer is ignored (strings are stored internally
// and retrieved via bcsv_reader_column_string).
// Returns the number of rows actually read (may be less than max_rows at EOF).
size_t              bcsv_reader_read_columns    (bcsv_reader_t reader, void** bufs,
                                                 size_t num_cols, size_t max_rows);
// Retrieve a string from the internal buffer after bcsv_reader_read_columns.
// col is the column index, row is the row index (0-based within the batch).
// Returns empty string if indices are out of range.
const char*         bcsv_reader_column_string   (bcsv_reader_t reader, size_t col, size_t row);
// Number of strings stored for a given column after bcsv_reader_read_columns.
size_t              bcsv_reader_column_string_count(bcsv_reader_t reader, size_t col);
// Pack all strings for a column into a contiguous null-terminated buffer.
// Returns total bytes needed (including null terminators).
// If out_buf is NULL or buf_size is 0, returns required size without writing.
size_t              bcsv_reader_column_strings_packed(bcsv_reader_t reader, size_t col,
                                                      char* out_buf, size_t buf_size);
// Write num_rows rows from column-oriented buffers through an opened writer.
// bufs is an array of num_cols pointers. For numeric columns, each pointer
// must point to a buffer of element type matching the column type.
// For string columns, bufs[c] must be a const char** (array of C string
// pointers, one per row). Returns true on success.
bool                bcsv_writer_write_columns   (bcsv_writer_t writer, const void** bufs,
                                                 size_t num_cols, size_t num_rows);