csharp/src/Bcsv/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr bcsv_sampler_get_conditional(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr bcsv_sampler_get_selection(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void bcsv_sampler_set_mode(nint sampler, SamplerMode mode);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern SamplerMode bcsv_sampler_get_mode(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool bcsv_sampler_next(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint bcsv_sampler_row(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint bcsv_sampler_output_layout(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint bcsv_sampler_source_row_pos(nint sampler);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr bcsv_sampler_error_msg(nint sampler);

    // ── Columnar Bulk I/O ──────────────────────────────────────────────
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint bcsv_reader_read_columns(nint reader, IntPtr[] bufs,
        nuint numCols, nuint maxRows);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr bcsv_reader_column_string(nint reader, nuint col, nuint row);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint bcsv_reader_column_string_count(nint reader, nuint col);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint bcsv_reader_column_strings_packed(nint reader, nuint col,
        IntPtr outBuf, nuint bufSize);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool bcsv_writer_write_columns(nint writer, IntPtr[] bufs,
        nuint numCols, nuint numRows);

    // ── Helpers ────────────────────────────────────────────────────────
    internal static string PtrToStringUtf8(IntPtr ptr)
    {
        if (ptr == IntPtr.Zero) return string.Empty;
        return Marshal.PtrToStringUTF8(ptr) ?? string.Empty;
    }

    internal static void ThrowIfError(string context)
    {
        var errPtr = bcsv_last_error();
        var err = PtrToStringUtf8(errPtr);
        if (!string.IsNullOrEmpty(err))
        {
            bcsv_clear_last_error();
            throw new BcsvException($"{context}: {err}");
        }
    }

    internal static void ThrowWithError(string message, IntPtr errPtr)
    {
        var err = PtrToStringUtf8(errPtr);
        throw new BcsvException($"{message}: {err}");
    }
}
